updated color scheme

--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript Challenge</title>
-    <link rel = "stylesheet" href="/assets/style.css">
+    <title>Home Page</title>
+    <link rel="stylesheet" href="/assets/style.css">
 </head>
 <body>
     <div class="container">
         <div id="home" class="flex-column flex-center">
-            <h1>Are you ready to play?</h1>
-            <a href="/game.html" class="btn">Start</a>
-            <a href="/highscores.html" id= "highscore-btn" class="btn">High Scores</a>
+            <h1>Are You Ready?</h1>
+            <a href="/game.html" class="btn">Play</a>
+            <a href="/highscores.html" id="highscore-btn" class="btn">High Scores</a>
         </div>
     </div>
+    
 </body>
 </html>
