--- a/game.html
+++ b/game.html
@@ -3,51 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz</title>
-    <link rel="stylesheet" href="./assets/style.css">
-    <link rel="stylesheet" href="./assets/game.css">
+    <title>Quiz Page</title>
+    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets/game.css">
 </head>
 <body>
     <div class="container">
-        <div id="game" class="justify-center flex-column">
-            <div id="display">
-                <div class="display-item">
-                    <p id="high-scores" class="display-prefix">
-                        <a href="/highscores.html">
-                            High Scores
-                        </a>
-                    </p>
-                </div>
-                <div class="display-item">
-                    <p class="display-prefix">
-                        Time:
-                    </p>
-                    <h1 class="display-main-text" id="time">
-                        75
-                    </h1>
-                </div>
-                
-            </div>
-            <h1 id="question">What is the answer to this question?</h1>
-            <div class="choice-container">
-                <p class="choice-prefix">A</p>
-                <p class="choice-text" data-number="1">Choice</p>
-            </div>
-            <div class="choice-container">
+       <div id="game" class="justify-center flex-column>">
+           <div id="hud">
+               <div class="hud-item">
+                   <p id="progressText" class="hud-prefix">
+                       Question
+                   </p>
+                   <div id="progressBar">
+                       <div id="progressBarFull"></div>
+                   </div>
+               </div>
+               <div class="hud-item">
+                   <p class="hud-prefix">
+                       Score
+                   </p>
+                   <h1 class="hud-main-text" id="score">
+                       0
+                   </h1>
+               </div>
+           </div>
+           <h1 id="question">What is the answer to this question?</h1>
+           <div class="choice-container">
+               <p class="choice-prefix">A</p>
+               <p class="choice-text" data-number="1">Choice 1</p>
+           </div>
+           <div class="choice-container">
                 <p class="choice-prefix">B</p>
-                <p class="choice-text" data-number="2">Choice</p>
+                <p class="choice-text" data-number="2">Choice 2</p>
             </div>
             <div class="choice-container">
                 <p class="choice-prefix">C</p>
-                <p class="choice-text" data-number="3">Choice</p>
+                <p class="choice-text" data-number="3">Choice 3</p>
             </div>
             <div class="choice-container">
                 <p class="choice-prefix">D</p>
-                <p class="choice-text" data-number="4">Choice</p>
+                <p class="choice-text" data-number="4">Choice 4</p>
             </div>
-        </div>
+       </div>
     </div>
-    <script src="assets/game.js"></script>
     
 </body>
 </html>
